clusters/home/apps/cloud/send/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: send
  namespace: send
  annotations:
    external-dns.kubernetes.io/hostname: "send.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`send.layertwo.dev`)
    kind: Rule
    middlewares:
    - name: send-oidc
    services:
    - name: send
      port: 8080
      serversTransport: send-transport
